unpackaged/main/default/objects/Case_Call__c/Case_Call__c.object-meta.xml
<CustomObject>
    <label>Case Call</label>
    <nameField>
        <displayFormat>Case Call-{0000}</displayFormat>
        <label>Case Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>