unpackaged/main/default/objects/Case_Call__c/fields/Call_Duration_minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_minutes__c</fullName>
    <description>Call Duration in minutes</description>
    <formula>((End_Time__c - Start_Time__c)*24)*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>