unpackaged/main/default/objects/Case_Call__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Calls</relationshipLabel>
    <relationshipName>Case_Calls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>