unpackaged/main/default/objects/Case_Call__c/fields/Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Communication_Channel__c</fullName>
    <label>Communication Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8x8</fullName>
            </value>
            <value>
                <fullName>Google Meets</fullName>
            </value>
            <value>
                <fullName>GoToMeeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Microsoft Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>