unpackaged/main/default/objects/Case_Call__c/fields/Customer_s_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Main_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer&#39;s Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Calls</relationshipLabel>
    <relationshipName>Case_Calls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>