unpackaged/main/default/objects/Case_Call__c/fields/Other_Call_Intention__c.field-meta.xml
<CustomField>
    <fullName>Other_Call_Intention__c</fullName>
    <description>Enter the intention of this call.</description>
    <label>Other Call Intention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>