unpackaged/main/default/objects/Case_Call__c/fields/Other_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Other_Communication_Channel__c</fullName>
    <label>Other Communication Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>