unpackaged/main/default/objects/Case_Call__c/validationRules/Call_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_Time_Validation</fullName>
    <active>true</active>
    <description>This validation rule ensures that the End Time is not before the Start Time</description>
    <errorConditionFormula>Start_Time__c  &gt;  End_Time__c</errorConditionFormula>
    <errorMessage>The Start Time can&#39;t be greater than the End Time.</errorMessage>
</ValidationRule>