unpackaged/main/default/objects/Case_Call__c/validationRules/Other_Communication_Channel.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Communication_Channel</fullName>
    <active>false</active>
    <description>This validation rule is used to ensure that the &quot;Other&quot; communication channel is specified if needed.</description>
    <errorConditionFormula>AND(
 $UserRole.Id &lt;&gt; &quot;00E30000000xue0&quot;,
 ISPICKVAL(  Communication_Channel__c  , &quot;Other&quot;),
 ISBLANK( Other_Communication_Channel__c ) 
)</errorConditionFormula>
    <errorDisplayField>Call_Memo_Next_Steps__c</errorDisplayField>
    <errorMessage>Please specify the communication channel used.</errorMessage>
</ValidationRule>